--- a/MVCTravelBookingISE/Views/BookingModels/BookingCart.cshtml
+++ b/MVCTravelBookingISE/Views/BookingModels/BookingCart.cshtml
@@ -72,3 +72,6 @@
     </div>
 </div>
 
+<label class="form-label" for="customFile">Attach supporting documents</label>
+<input type="file" class="form-control" id="customFile" />
+
