--- a/MVCTravelBookingISE/Views/Shared/_Layout.cshtml
+++ b/MVCTravelBookingISE/Views/Shared/_Layout.cshtml
@@ -70,7 +70,10 @@
                             </a>
 
                         </li>
-                       
+                        <li class="nav-item">
+                            Airlines
+                        </li>
+                          
 
                       
 
@@ -137,7 +140,7 @@
 
 
     <!-- Footer -->
-    <footer class="text-center text-lg-start bg-dark text-white">
+    <footer class="text-center text-lg-start bg-dark text-black">
         <!-- Section: Social media -->
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
             <!-- Left -->
