--- a/MVCTravelBookingISE/Views/TransportModels/Index.cshtml
+++ b/MVCTravelBookingISE/Views/TransportModels/Index.cshtml
@@ -4,29 +4,152 @@
     ViewData["Title"] = "Transport";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="form-outline mb-4">
-    <input type="search" class="form-control" id="datatable-search-input">
-    <label class="form-label" for="datatable-search-input">Search</label>
+<head>
+  
+</head>
+
+
+  <form>
+    <div class="card w-100 border-2 bg-dark ">
+        <div class="card-body ">
+
+            <div class="row">
+                <div class="col">
+                    <div class="mb-2">                   
+                               <input type="text" class="form-control" list="origin-options" id="origin-input" placeholder="Pick up point" aria-describedby="origin-label" />
+                            
+                       
+                    </div>
+                </div>
+                                                                  
+               
+                <div class="col">
+                    <div class="mb-2">
+                        <div class="input-group">
+
+                            <input type="text" class="form-control" list="origin-options" id="origin-input" placeholder="Destination point" aria-describedby="origin-label" />
+                            <datalist id="origin-options"></datalist>
+
+                        </div>
+
+                    </div>
+                   
+                </div>
+                <div class="col">
+                    <div class="mb-2 align-content-center">
+                        <a class="btn btn-primary text-white " asp-controller="TransportModels" asp-action="Filter">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                            </svg> Search
+                        </a>
+
+                    </div>
+
+                </div>
+            </div>
+               
+
+            </div>
+        </div>
+    </div>
+</form>
+
+
+<div class="container z-depth-1 my-5 p-5">
+
+    <!-- Section -->
+    <section>
+
+        <h1 class="font-weight-bold text-center dark-grey-text pb-2">A Few Easy Steps to Reserve a booking!</h1>
+        
+        <p class="lead text-center text-muted pt-2 pb-3 mb-5">We are so proud of our product. It's really easy to create a landing page for your product.</p>
+
+        <div class="row dark-grey-text">
+
+            <div class="col-md-4 col-xl-4 mb-4">
+                <div class="media">
+                    <div class="mr-4">
+                        <span class="text-primary">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+                            </svg>
+                        </span>
+                    </div>
+                    <div class="media-body">
+
+                        <h4 class="font-weight-bold">Step One</h4>
+                        <p class="text-muted">Make sure the correct supporting documents are attached when sdubmitting the booking.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-xl-4 mb-4">
+                <div class="media">
+                    <div class="mr-4">
+                        <span class="text-danger">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                                <path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z" />
+                            </svg>
+                        </span>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="font-weight-bold">Step Two</h4>
+                        <p class="text-muted">A message and email of approval will be sent 24 hours after submitting booking. Ensure that this is recieved</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-xl-4 mb-4">
+                <div class="media">
+                    <div class="mr-4">
+                        <span class="text-info"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-book-fill" viewBox="0 0 16 16">
+  <path d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"/>
+</svg></span>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="font-weight-bold">Step Three</h4>
+                        <p class="text-muted">Make sure the rules and regulations have been read, as well as the term and conditions before approval is sent.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-xl-4 mb-4">
+                <div class="media">
+                    <div class="mr-4">
+                        <span class="text-warning">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-airplane-fill" viewBox="0 0 16 16">
+                                <path d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849Z" />
+                            </svg>>
+                        </span>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="font-weight-bold">Step Four</h4>
+                        <p class="text-muted">Get ready to for your trip! Make sure your passport is with you and the your flight ticket has been sent to you in time!</p>
+                    </div>
+                </div>
+            </div>
+
+           
+            </div>
+
+        </div>
+
+    </section>
+    <!-- Section -->
+
 </div>
+
+
 <div class="container px-4 px-lg-5">
 
     <!-- Heading Row-->
     <div class="row gx-4 gx-lg-5 align-items-center my-5">
-        <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://images.unsplash.com/photo-1570125909232-eb263c188f7e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80" alt="..." /></div>
-        <div class="col-lg-5">
-            <h1 class="text-lg">Find Shuttle,Carport,Car rentals</h1>
-            <p>Clean cars. Flexible bookings.Socially distant rental counters! Book Now! Refunds are also included</p>
-            <a class="btn btn-outline-secondary" href="#!">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cursor-fill" viewBox="0 0 16 16">
-                    <path d="M14.082 2.182a.5.5 0 0 1 .103.557L8.528 15.467a.5.5 0 0 1-.917-.007L5.57 10.694.803 8.652a.5.5 0 0 1-.006-.916l12.728-5.657a.5.5 0 0 1 .556.103z" />
-                </svg>Book Now!
-            </a>
-        </div>
+        
     </div>
     <!-- Call to Action-->
-    <div class="card text-white bg-dark my-5 py-4 text-center">
-        <div class="card-body "><p class="text-white m-0">Get 10% off your next booking after rating your experience! </p></div>
-    </div>
+
     <!-- Content Row-->
     <div class="card-group">
         <div class="card">
@@ -68,100 +191,112 @@
             </div>
         </div>
     </div>
-    <table class="table table-hover table-dark text-white" style="margin-top:50px">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Pick_Up_Point)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Destination_point)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Transport_Type)
-            </th>
-         
-            <th>
-                @Html.DisplayNameFor(model => model.Transport_ratings)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
+
+    <div class="alert alert-primary" role="alert">
+        Get 10% off your next booking after rating your experience!  <a href="#" class="alert-link">Check available Rewards</a>
+    </div>
+  <div class="row" style="margin-top:30px;">
 @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Pick_Up_Point)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Destination_point)
-            </td>
-            <td>
-              
 
-                        <p class="card-text">
-                            @if (item.Transport_Type == 'S')
-                            {
-                                <span class="text-white">
-                                  Shuttle
-                                </span>
-                            }
-                            else if (item.Transport_Type == 'C')
-                            {
-                                <span class="text-white">Carport</span>
-                            }
-                            else
-                            {
-                                <span class="text-white" >Rental</span>
-                            }
+
+                <div class="container ">
+                <div class="row ">
+                <div class=" col col-sm border-primary mb-3">
+                            <div class="card card-margin w-75">
+                       
+                            <div class="col-md-12 bg-transparent">
+                                <div class="card-header no-border">
+                                    <h5 class="card-title text-black">
+                                        <strong>
+                                            <span class="widget-49-pro-title">
+
+                                                From: @Html.DisplayFor(modelItem => item.Pick_Up_Point)
+                                            </span>
+
+
+                                        </strong>
+
                            
-                        </p>
+                          </h5>
 
-            </td>
-            <td>
-             
-                        <p class="card-text">
-                            @if (item.Transport_ratings == 5)
-                            {
-                                <span class="text-primary">
-                                    &#9733;&#9733;&#9733;&#9733;&#9733;<span class="text-secondary"> Superhost</span>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-hand-thumbs-up-fill" viewBox="0 0 16 16">
-                                        <path d="M6.956 1.745C7.021.81 7.908.087 8.864.325l.261.066c.463.116.874.456 1.012.965.22.816.533 2.511.062 4.51a9.84 9.84 0 0 1 .443-.051c.713-.065 1.669-.072 2.516.21.518.173.994.681 1.2 1.273.184.532.16 1.162-.234 1.733.058.119.103.242.138.363.077.27.113.567.113.856 0 .289-.036.586-.113.856-.039.135-.09.273-.16.404.169.387.107.819-.003 1.148a3.163 3.163 0 0 1-.488.901c.054.152.076.312.076.465 0 .305-.089.625-.253.912C13.1 15.522 12.437 16 11.5 16H8c-.605 0-1.07-.081-1.466-.218a4.82 4.82 0 0 1-.97-.484l-.048-.03c-.504-.307-.999-.609-2.068-.722C2.682 14.464 2 13.846 2 13V9c0-.85.685-1.432 1.357-1.615.849-.232 1.574-.787 2.132-1.41.56-.627.914-1.28 1.039-1.639.199-.575.356-1.539.428-2.59z" />
-                                    </svg>
-                                </span>
-                            }
-                            else if (item.Transport_ratings == 4)
-                            {
-                                <span class="text-primary">&#9733;&#9733;&#9733;&#9733;</span>
-                            }
-                            else if (item.Transport_ratings == 3)
-                            {
-                                <span class="text-primary">&#9733;&#9733;&#9733;</span>
-                            }
-                            else if (item.Transport_ratings == 2)
-                            {
-                                <span class="text-primary">&#9733;&#9733;</span>
-                            }
-                            else if (item.Transport_ratings == 1)
-                            {
-                            <p class="text-primary">&#9733;</p>
-                            }
-                            else
-                            {
-                            <span class="text-primary">Be the first one to rate!</span>
-                            }
-                        </p>
-            </td>
-            <td>
-                        
-                    <a class="btn btn-success" asp-action="Details" asp-route-id="@item.Transport_Id">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cursor-fill" viewBox="0 0 16 16">
-                                <path d="M14.082 2.182a.5.5 0 0 1 .103.557L8.528 15.467a.5.5 0 0 1-.917-.007L5.57 10.694.803 8.652a.5.5 0 0 1-.006-.916l12.728-5.657a.5.5 0 0 1 .556.103z" />
-                            </svg>  View
-                    </a>
+                   </div>
+                                 <div class="col-md-12">
+                                <div class="card-body pt-0">
+                                    <div class="widget-49">
+                                        <div class="widget-49-title-wrapper">
+                                           
+                                            <div class="widget-49-meeting-info">
 
-            </td>
-        </tr>
+
+                                                    @if (item.Transport_Type == 'S')
+                                                    {
+                                                        <span class="">
+                                                           Shuttle from airport to destination is a available for a group of travellers or single.
+                                                        </span>
+                                                    }
+                                                    else if (item.Transport_Type == 'C')
+                                                    {
+                                                        <span class="">Car rentals are available for group settings for both singles and groups.</span>
+                                                    }
+                                                    else
+                                                    {
+                                                        <span class="">Rental</span>
+                                                    }
+                                            </div>
+                                        
+                                        </div>
+                                <p class="card-text">
+                                    @if (item.Transport_ratings == 5)
+                                    {
+                                        <span class="text-warning">
+                                            &#9733;&#9733;&#9733;&#9733;&#9733;<span class="text-secondary"> Superhost</span>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-hand-thumbs-up-fill" viewBox="0 0 16 16">
+                                                <path d="M6.956 1.745C7.021.81 7.908.087 8.864.325l.261.066c.463.116.874.456 1.012.965.22.816.533 2.511.062 4.51a9.84 9.84 0 0 1 .443-.051c.713-.065 1.669-.072 2.516.21.518.173.994.681 1.2 1.273.184.532.16 1.162-.234 1.733.058.119.103.242.138.363.077.27.113.567.113.856 0 .289-.036.586-.113.856-.039.135-.09.273-.16.404.169.387.107.819-.003 1.148a3.163 3.163 0 0 1-.488.901c.054.152.076.312.076.465 0 .305-.089.625-.253.912C13.1 15.522 12.437 16 11.5 16H8c-.605 0-1.07-.081-1.466-.218a4.82 4.82 0 0 1-.97-.484l-.048-.03c-.504-.307-.999-.609-2.068-.722C2.682 14.464 2 13.846 2 13V9c0-.85.685-1.432 1.357-1.615.849-.232 1.574-.787 2.132-1.41.56-.627.914-1.28 1.039-1.639.199-.575.356-1.539.428-2.59z" />
+                                            </svg>
+                                        </span>
+                                    }
+                                    else if (item.Transport_ratings == 4)
+                                    {
+                                        <span class="text-warning">&#9733;&#9733;&#9733;&#9733;</span>
+                                    }
+                                    else if (item.Transport_ratings == 3)
+                                    {
+                                        <span class="text-warning">&#9733;&#9733;&#9733;</span>
+                                    }
+                                    else if (item.Transport_ratings == 2)
+                                    {
+                                        <span class="text-warning">&#9733;&#9733;</span>
+                                    }
+                                    else if (item.Transport_ratings == 1)
+                                    {
+                                    <p class="text-warning">&#9733;</p>
+                                    }
+                                    else
+                                    {
+                                    <span class="text-warning">Be the first one to rate!</span>
+                                    }
+                                </p>
+                                     <div class="widget-49-meeting-info">
+                                              <strong>
+                                                        <span class="widget-49-pro-title">
+                                                            To: @Html.DisplayFor(modelItem => item.Destination_point)
+                                                        </span>
+                                              </strong>  
+
+                                            </div>
+                                        <div class="widget-49-meeting-action">
+                                            <a href="#" class="btn btn-sm btn-primary">More information</a>
+                                             
+                                        </div>
+                                    </div>
+                                </div>
+                                </div>
+                            </div>
+                        </div>
+                     </div>
+                   </div>
+                    
+                </div>
+       
 }
-    </tbody>
-</table>
+  </div>
