--- a/MVCTravelBookingISE/Views/AccomodationModels/Edit.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Edit.cshtml
@@ -4,69 +4,23 @@
     ViewData["Title"] = "Update Accomodation";
 }
 
-<h1>Edit</h1>
 
-<h4>AccomodationModel</h4>
+<h4>Rate the accomodation</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Acco_Id" />
-            <div class="form-group">
-                <label asp-for="Acco_picture" class="control-label"></label>
-               
-                <input asp-for="Acco_picture" class="form-control" />
-                <span asp-validation-for="Acco_picture" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Acco_Name" class="control-label"></label>
-                <input asp-for="Acco_Name" class="form-control" />
-                <span asp-validation-for="Acco_Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Acco_Destination" class="control-label"></label>
-                <input asp-for="Acco_Destination" class="form-control" />
-                <span asp-validation-for="Acco_Destination" class="text-danger"></span>
-            </div>
-             <div class="form-group">
-                <label asp-for="Acco_Rules" class="control-label"></label>
-                <input asp-for="Acco_Rules" class="form-control" />
-                <span asp-validation-for="Acco_Rules" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Acco_Rooms" class="control-label"></label>
-                <input asp-for="Acco_Rooms" class="form-control" />
-                <span asp-validation-for="Acco_Rooms" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Acco_Bathrooms" class="control-label"></label>
-                <input asp-for="Acco_Bathrooms" class="form-control" />
-                <span asp-validation-for="Acco_Bathrooms" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Acco_Distance" class="control-label"></label>
-                <input asp-for="Acco_Distance" class="form-control" />
-                <span asp-validation-for="Acco_Distance" class="text-danger"></span>
-            </div>
+           
             <div class="form-group">
                 <label asp-for="Acco_Rate" class="control-label"></label>
                 <input asp-for="Acco_Rate" class="form-control" />
                 <span asp-validation-for="Acco_Rate" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Acco_Type" class="control-label"></label>
-                <input asp-for="Acco_Type" class="form-control" />
-                <span asp-validation-for="Acco_Type" class="text-danger"></span>
-            </div>
           
-            <div class="input-group mb-3">
-                <label asp-for="Acco_Price" class="control-label"></label>
-                <input asp-for="Acco_Price" class="form-control" aria-label="Amount (to the nearest dollar)" />
-                <span asp-validation-for="Acco_Price" class="text-danger input-group-text">.00</span>
-            </div>
+        
+           
             <div class="form-group">
-                <input type="submit" value="Update" class="btn btn-primary" />
+                <input type="submit" value="Submit Rating" class="btn btn-primary" />
             </div>
         </form>
     </div>
