--- a/MVCTravelBookingISE/Views/AccomodationModels/UpdateRating.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/UpdateRating.cshtml
@@ -1,4 +1,5 @@
-﻿@*
+﻿@model MVCTravelBookingISE.Models.AccomodationModel
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
