--- a/MVCTravelBookingISE/Views/FlightModels/Details.cshtml
+++ b/MVCTravelBookingISE/Views/FlightModels/Details.cshtml
@@ -6,20 +6,10 @@
 
 <h1>Details</h1>
 
-<div class="card">
-    <div class="card-header">
-        <ul class="nav nav-tabs card-header-tabs">
-            <li class="nav-item">
-                <a class="nav-link active" href="#">Destination</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Rules</a>
-            </li>
-            
-        </ul>
-    </div>
+<div class="card text-center w-75">
+   
     <dl class="card-body">
-       
+       <h5 class="card-title"></h5>
     
        
         <dd class="col-sm-10">
@@ -38,13 +28,13 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Flight_Date)
         </dd>
-
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Flight_Class)
+            @Html.DisplayNameFor(model => model.FlightRule.Flight_Descrip)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Flight_Class)
+            @Html.DisplayFor(model => model.FlightRule.Flight_Descrip)
         </dd>
+      
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Flight_Price)
         </dt>
