--- a/MVCTravelBookingISE/Views/FlightModels/Index.cshtml
+++ b/MVCTravelBookingISE/Views/FlightModels/Index.cshtml
@@ -34,8 +34,6 @@
         <strong>Cheap and affordable Flights</strong> and check out the Flight Rules<a href="FlightRulesModels/Index" class="alert-link"> Check Now!</a>.
     </div>
 
-
-  
      <div class="row">
          <div class="col">
              <div class="mb-2">
@@ -74,7 +72,7 @@
       
             </div>
        
-    <div class="card border-5">
+    <div class="card border-2  ">
         <div class="card-body ">
 
             <div class="row">
@@ -172,7 +170,7 @@
         </div>
     </div>
    
-    <table class="table table-hover table-dark text-white">
+    <table class="table table-hover table-striped text-black">
     <thead>
         <tr>
             <th>
@@ -186,6 +184,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Flight_Class)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FlightRule.Flight_Name)
             </th>
            
             <th class="text-center">Actions</th>
@@ -227,15 +228,11 @@
                     <span>First class</span>
                 }
             </td>
+            <td>@Html.DisplayFor(modelItem => item.FlightRule.Flight_Name)</td>
            <td>
-                        <a class="btn btn-success float-right"data-bs-toggle="popover"  data-bs-placement="left" asp-action="Details" asp-route-id="@item.Flight_Id">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cursor-fill" viewBox="0 0 16 16">
-                                <path d="M14.082 2.182a.5.5 0 0 1 .103.557L8.528 15.467a.5.5 0 0 1-.917-.007L5.57 10.694.803 8.652a.5.5 0 0 1-.006-.916l12.728-5.657a.5.5 0 0 1 .556.103z" />
-                            </svg>
-                            <i class="bi bi-eye-fill"></i> Book Now!
-                        </a>
+                       
                         
-                        <a class="btn btn-primary float-right" asp-action="Details" asp-route-id="@item.Flight_Id">
+                        <a class="btn btn-warning btn-sm float-right" asp-action="Details" asp-route-id="@item.Flight_Id">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="1M6" fill="currentColor" class="bi bi-body-text" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M0 .5A.5.5 0 0 1 .5 0h4a.5.5 0 0 1 0 1h-4A.5.5 0 0 1 0 .5Zm0 2A.5.5 0 0 1 .5 2h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5Zm9 0a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5Zm-9 2A.5.5 0 0 1 .5 4h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5Zm5 0a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5Zm7 0a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5Zm-12 2A.5.5 0 0 1 .5 6h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5Zm8 0a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5Zm-8 2A.5.5 0 0 1 .5 8h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5Zm7 0a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5Zm-7 2a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 0 1h-8a.5.5 0 0 1-.5-.5Zm0 2a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5Zm0 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5Z" />
                             </svg>
@@ -248,7 +245,7 @@
 }
     </tbody>
 </table>
-
+   
 
 @*<div class="accordion" id="accordionExample">
     <div class="accordion-item">
