--- a/MVCTravelBookingISE/wwwroot/css/site.css
+++ b/MVCTravelBookingISE/wwwroot/css/site.css
@@ -18,7 +18,7 @@ html {
 
 body {
     margin-bottom: 60px;
-    font-family:  'Roboto', sans-serif;
+    font-family: 'Merriweather Sans', sans-serif;
 }
 header {
   
@@ -28,7 +28,7 @@ header {
    z-index:10;
 }
 .navbar{
- ht
+ 
 }
 h1,
 h2,
@@ -38,10 +38,10 @@ h5,
 h6 {
     margin: 0;
     color: #322429;
-    font-weight: 200;
+    font-weight: 500;
 }
 h1 {
-    font-size: 40px;
+    font-size: 80px;
 }
 body {
     height: 100vh;
@@ -394,4 +394,62 @@ h1 {
     max-height: 160px;
     min-height: 160px;
     object-fit: cover
+}
+body {
+    margin-top: 20px;
+    background-color: #ffff;
+}
+
+.btn {
+    margin-bottom: 5px;
+}
+
+.grid {
+    position: relative;
+    width: 100%;
+    background: #fff;
+    color: #666666;
+    border-radius: 2px;
+    margin-bottom: 25px;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+}
+
+    .grid .grid-body {
+        padding: 15px 20px 15px 20px;
+        font-size: 0.9em;
+        line-height: 1.9em;
+    }
+
+.search table tr td.rate {
+    color: #f39c12;
+    line-height: 50px;
+}
+
+.search table tr:hover {
+    cursor: pointer;
+}
+
+.search table tr td.image {
+    width: 50px;
+}
+
+.search table tr td img {
+    width: 50px;
+    height: 50px;
+}
+
+.search table tr td.rate {
+    color: #f39c12;
+    line-height: 50px;
+}
+
+.search table tr td.price {
+    font-size: 1.5em;
+    line-height: 50px;
+}
+
+.search #price1,
+.search #price2 {
+    display: inline;
+    font-weight: 600;
 }
