--- a/MVCTravelBookingISE/Areas/Identity/Pages/Account/Login.cshtml
+++ b/MVCTravelBookingISE/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,55 +2,38 @@
 @model LoginModel
 
 @{
-
-   
+    ViewData["Title"] = "Log in";
 }
-<head>
-   <link rel="stylesheet" href="~/css/site.css" />
-
-</head>
 
 <h1>@ViewData["Title"]</h1>
-
-
-
-     <div class="container py-5 h-100">
-         <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                <div class="card shadow-2-strong" style="border-radius: 1rem;">
-                   <div class="card-body p-5">
-                      
-                    <div class="text-center">
-                        <img src="~/img/A letter Logo design(5).png"
-                             style="width: 185px;" alt="logo">
-                        <h4 class="mt-1 mb-5 pb-1">Unlimited Travels Login</h4>
-                    </div>
-        
-                   <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-outline mb-4">
-                     <label asp-for="Input.Email" class="form-label"></label>
+<div class="row">
+    <div class="col-md-4">
+        <section>
+            <form id="account" method="post">
+                <h2>Use a local account to log in.</h2>
+                <hr />
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-floating">
                     <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                
+                    <label asp-for="Input.Email" class="form-label"></label>
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
-                <div class="form-outline mb-4">
-                       <label asp-for="Input.Password" class="form-label"></label>
+                <div class="form-floating">
                     <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
-                 
+                    <label asp-for="Input.Password" class="form-label"></label>
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
-                
-                    <div class="form-check d-flex justify-content-start mb-4">
+                <div>
+                    <div class="checkbox">
                         <label asp-for="Input.RememberMe" class="form-label">
                             <input class="form-check-input" asp-for="Input.RememberMe" />
                             @Html.DisplayNameFor(m => m.Input.RememberMe)
                         </label>
                     </div>
-                
-                
+                </div>
+                <div>
                     <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
-                <hr class="my-4" />
-                                
+                </div>
                 <div>
                     <p>
                         <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
@@ -62,12 +45,39 @@
                         <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
                     </p>
                 </div>
-            
-           </div>
-         </div>
-       </div>
+            </form>
+        </section>
     </div>
-  
+    <div class="col-md-6 col-md-offset-2">
+        <section>
+            <h3>Use another service to log in.</h3>
+            <hr />
+            @{
+                if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                {
+                    <div>
+                        <p>
+                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
+                            about setting up this ASP.NET application to support logging in via external services</a>.
+                        </p>
+                    </div>
+                }
+                else
+                {
+                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                        <div>
+                            <p>
+                                @foreach (var provider in Model.ExternalLogins)
+                                {
+                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                }
+                            </p>
+                        </div>
+                    </form>
+                }
+            }
+        </section>
+    </div>
 </div>
 
 @section Scripts {
