--- a/MVCTravelBookingISE/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MVCTravelBookingISE/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,98 +1,67 @@
 ﻿@page
 @model RegisterModel
 @{
-  
-  
+    ViewData["Title"] = "Register";
 }
 
 <h1>@ViewData["Title"]</h1>
 
-<!-- Section: Design Block -->
-<section class="">  
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="px-4 py-5 px-md-5 text-center text-lg-start" style="background-color: white">
-             <div class="container">
-                <div class="row gx-lg-5 align-items-center">
-                    <div class="col-lg-6 mb-5 mb-lg-0">
-                        <img  class="align-items-center"src="~/img/A letter Logo design(5).png" style="width:150px" />
-                        <h1 class="my-5 display-3 fw-bold ls-tight">
-                            Unlimited Travels <br />
-                        
-                        </h1>
-                        <p style="color:black">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Eveniet, itaque accusantium odio, soluta, corrupti aliquam
-                            quibusdam tempora at cupiditate quis eum maiores libero
-                            veritatis? Dicta facilis sint aliquid ipsum atque?
+<div class="row">
+    <div class="col-md-4">
+        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+            <h2>Create a new account.</h2>
+            <hr />
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-floating">
+                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+                <label asp-for="Input.Email"></label>
+                <span asp-validation-for="Input.Email" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
+                <label asp-for="Input.Password"></label>
+                <span asp-validation-for="Input.Password" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+                <label asp-for="Input.ConfirmPassword"></label>
+                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            </div>
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+        </form>
+    </div>
+    <div class="col-md-6 col-md-offset-2">
+        <section>
+            <h3>Use another service to register.</h3>
+            <hr />
+            @{
+                if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                {
+                    <div>
+                        <p>
+                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
+                            about setting up this ASP.NET application to support logging in via external services</a>.
                         </p>
-                     </div>
-                     <div class="col-lg-6 mb-5 mb-lg-0">
-                                 <div class="card">
-                                   <div class="card-body py-5 px-md-5">
-                                     <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-                                       <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                          <div class="row">
-                                            @*    <div class="col-md-6 mb-4">
-                                                    <div class="form-outline">
-                                                        <input asp-for="Input.FirstName" class="form-control" autocomplete="username" aria-required="true" />
-                                                        <label asp-for="Input.FirstName"></label>
-                                                        <span asp-validation-for="Input.FirstName" class="text-danger"></span>
-                                                    </div>
+                    </div>
+                }
+                else
+                {
+                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                        <div>
+                            <p>
+                                @foreach (var provider in Model.ExternalLogins)
+                                {
+                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                }
+                            </p>
+                        </div>
+                    </form>
+                }
+            }
+        </section>
+    </div>
+</div>
 
-                                                </div>
-
-                                                    <div class="col-md-6 mb-4">
-
-                                                        <div class="form-outline">
-                                                            <input asp-for="Input.LastName" class="form-control" autocomplete="username" aria-required="true" />
-                                                            <label asp-for="Input.LastName"></label>
-                                                            <span asp-validation-for="Input.LastName" class="text-danger"></span>
-                                                        </div>
-                                                    </div>*@
-
-                                           </div>
-
-                                                    <div class="form-outline mb-4">
-                                                       
-                                                            <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                                                            <label asp-for="Input.Email"></label>
-                                                            <span asp-validation-for="Input.Email" class="text-danger"></span>
-                                                     </div>
-                                                    <div class="form-outline mb-4">
-                                                        <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
-                                                        <label asp-for="Input.Password"></label>
-                                                        <span asp-validation-for="Input.Password" class="text-danger"></span>
-                                                    </div>
-                                                    <div class="form-outline mb-4">
-                                                        <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                                                        <label asp-for="Input.ConfirmPassword"></label>
-                                                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-                                                    </div>
-                                                    <!-- Checkbox -->
-                                                    <div class="form-check d-flex justify-content-center mb-4">
-                                                             <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
-                                                        <label class="form-check-label" for="form2Example33">
-                                                            Subscribe to our newsletter
-                                                        </label>
-                                                     
-                                                      
-                                                    </div>
-                                                <button id="registerSubmit" type="submit" class="btn btn-primary btn-block mb-4">Register</button>
-                                              
-                                                <!-- Register buttons -->
-                                              
-
-                                      </form>
-                                   </div>
-
-                                 </div>
-                             </div>
-                 </div>
-             </div>
-
-       </div>
-
-</section>
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
