--- a/MVCTravelBookingISE/Views/BookingModels/Edit.cshtml
+++ b/MVCTravelBookingISE/Views/BookingModels/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVCTravelBookingISE.Models.BookingModel
+﻿@*@model MVCTravelBookingISE.Models.BookingModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -38,3 +38,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+*@
