--- a/MVCTravelBookingISE/Views/BookingModels/Create.cshtml
+++ b/MVCTravelBookingISE/Views/BookingModels/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVCTravelBookingISE.Models.BookingModel
+﻿@*@model MVCTravelBookingISE.Models.BookingModel
 
 @{
     ViewData["Title"] = "Create";
@@ -33,3 +33,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+*@
