--- a/MVCTravelBookingISE/Views/BookingModels/Delete.cshtml
+++ b/MVCTravelBookingISE/Views/BookingModels/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVCTravelBookingISE.Models.BookingModel
+﻿@*@model MVCTravelBookingISE.Models.BookingModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -25,4 +25,4 @@
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
-</div>
+</div>*@
