--- a/MVCTravelBookingISE/Views/BookingModels/Details.cshtml
+++ b/MVCTravelBookingISE/Views/BookingModels/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVCTravelBookingISE.Models.BookingModel
+﻿@*@model MVCTravelBookingISE.Models.BookingModel
 
 @{
     ViewData["Title"] = "Details";
@@ -25,3 +25,4 @@
     <a asp-action="Edit" asp-route-id="@Model?.Booking_Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+*@
